# MLGEFS

./: .gitignore  .gitmodules  environment.yml  pyproject.toml  readme.md
oper/: cronjob_cloud.sh  cronjob_cloud_ens_mixed.sh  cronjob_usra.sh  gcjob_cloud.sh  gcjob_cloud_ens.sh  gdas_utility.py  gen_gefs_ics.py  mlgefs_datadissm_ursa.sh  mlgefs_prepdata_ursa.sh  mlgefs_runfcst_ursa.sh  model_weights.json  run_gencast.py  run_graphcast.py  run_graphcast_ens.py  source-gdas_date-2024060100_res-0.25_levels-13_steps-2.nc  submit_job.py  submit_mlgefs_job.py  submit_mlgefs_job_ursa.py
oper/ursa/: cronjob_usra.sh  jAIGFS_cyclone_track_00.ecf_ursa  mlgefs_datadissm_ursa.sh  mlgefs_prepdata_ursa.sh  mlgefs_runfcst_ursa.sh  submit_mlgefs_job_ursa.py
oper/utils/: nc2grib.py
training/: downsampler.sh  generate_batch_files.py  tar_extract.sh
